--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
       <div class="row h-75" >
         <div class="col-lg-4" data-aos="fade-right">
-          <img src="assets/img/amhope.jpg" class="img-fluid h-75 w-75" alt="">
+          <img src="assets/img/profile.jpg" class="img-fluid h-100 w-100" alt="">
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
           <h3>Full Stack Developer</h3>
