added more images

--- a/chat-details.html
+++ b/chat-details.html
@@ -46,15 +46,19 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/chatCont.jpg" class="check" alt="">
+                  <img src="assets/img/portfolio/chatCont.png" class="check" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/chatone.jpg" alt="" class="check">
+                  <img src="assets/img/portfolio/chatone.png" alt="" class="check">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/chats.jpg" class="check" alt="">
+                  <img src="assets/img/portfolio/chats.png" class="check" alt="">
+                </div>
+                
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/chat.png" class="check" alt="">
                 </div>
               </div>
               <div class="swiper-pagination"></div>
