--- a/index.html
+++ b/index.html
@@ -310,12 +310,12 @@
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-app">
           <div class="portfolio-wrap">
-            <img src="assets/img/portfolio/movilaa.jpg" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/movilaa.png" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Movilla</h4>
               <p>A Movie based </p>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/movi.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Movilla"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/movi.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Movilla"><i class="bx bx-plus"></i></a>
                 <a href="movi-details.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -324,12 +324,12 @@
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-web">
           <div class="portfolio-wrap">
-            <img src="assets/img/portfolio/chatCont.jpg" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/chatCont.png" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Chat one</h4>
               <p>A web Whatsapp</p>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/chatCont.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Chat one"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/chatCont.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Chat one"><i class="bx bx-plus"></i></a>
                 <a href="chat-details.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
