--- a/movi-details.html
+++ b/movi-details.html
@@ -45,18 +45,18 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/movi.jpg" class="check" alt="">
+                  <img src="assets/img/portfolio/movi.png" class="check" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/moviis.jpg" alt="" class="check">
+                  <img src="assets/img/portfolio/moviis.png" alt="" class="check">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/movilaa.jpg" class="check" alt="">
+                  <img src="assets/img/portfolio/movilaa.png" class="check" alt="">
                 </div>
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/movila.jpg" class="check" alt="">
+                  <img src="assets/img/portfolio/movila.png" class="check" alt="">
                 </div>
               </div>
               <div class="swiper-pagination"></div>
